// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot primary 1`] = `
.c0 {
  background-color: #007bff;
  border-color: #007bff;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.125;
  padding: .5625rem 1rem;
  font-size: .75rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #ffffff;
}

.c0:hover {
  background-color: #006fe6;
  border-color: #006fe6;
  box-shadow: 0 5px 15px rgba(0,0,0,.05),0 4px 10px rgba(0,123,255,.25);
  color: #ffffff;
}

.c0:active {
  background-color: #006fe6;
  border-color: #0062cc;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,123,255,.15),0 3px 15px rgba(0,123,255,.2),0 2px 5px rgba(0,0,0,.1);
}

<button
  className="c0"
  color="primary"
  fill="fill"
  onClick={[Function]}
  type="button"
>
  button
</button>
`;

exports[`Button snapshot primary outline 1`] = `
.c0 {
  background-color: #ffffff;
  border-color: #007bff;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.125;
  padding: .5625rem 1rem;
  font-size: .75rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #007bff;
}

.c0:hover {
  background-color: #006fe6;
  border-color: #006fe6;
  box-shadow: 0 5px 15px rgba(0,0,0,.05),0 4px 10px rgba(0,123,255,.25);
  color: #ffffff;
}

.c0:active {
  border-color: #0062cc;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,123,255,.15),0 3px 15px rgba(0,123,255,.2),0 2px 5px rgba(0,0,0,.1);
}

<button
  className="c0"
  color="primary"
  fill="outline"
  onClick={[Function]}
  type="button"
>
  button
</button>
`;

exports[`Button snapshot primary small  1`] = `
.c0 {
  background-color: #007bff;
  border-color: #007bff;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  padding: 0.4286rem 0.875rem;
  font-size: 0.6875rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #ffffff;
}

.c0:hover {
  background-color: #006fe6;
  border-color: #006fe6;
  box-shadow: 0 5px 15px rgba(0,0,0,.05),0 4px 10px rgba(0,123,255,.25);
  color: #ffffff;
}

.c0:active {
  background-color: #006fe6;
  border-color: #0062cc;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,123,255,.15),0 3px 15px rgba(0,123,255,.2),0 2px 5px rgba(0,0,0,.1);
}

<button
  className="c0"
  color="primary"
  fill="fill"
  onClick={[Function]}
  type="button"
>
  button
</button>
`;

exports[`Button snapshot primary small outline 1`] = `
.c0 {
  background-color: #ffffff;
  border-color: #007bff;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  padding: 0.4286rem 0.875rem;
  font-size: 0.6875rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #007bff;
}

.c0:hover {
  background-color: #006fe6;
  border-color: #006fe6;
  box-shadow: 0 5px 15px rgba(0,0,0,.05),0 4px 10px rgba(0,123,255,.25);
  color: #ffffff;
}

.c0:active {
  border-color: #0062cc;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,123,255,.15),0 3px 15px rgba(0,123,255,.2),0 2px 5px rgba(0,0,0,.1);
}

<button
  className="c0"
  color="primary"
  fill="outline"
  onClick={[Function]}
  type="button"
>
  button
</button>
`;

exports[`Button snapshot white  1`] = `
.c0 {
  background-color: #ffffff;
  border-color: #e1e5eb;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.125;
  padding: .5625rem 1rem;
  font-size: .75rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #5a6169;
}

.c0:hover {
  background-color: #ffffff;
  border-color: #e1e5eb;
  box-shadow: 0 0.125rem 0.625rem rgba(129,142,163,.2),0 0.0625rem 0.125rem rgba(129,142,164,.3);
  color: #5a6169;
}

.c0:active {
  background-color: #007bff;
  border-color: #007bff;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(251,251,251,.15),0 3px 15px rgba(251,251,251,.2),0 2px 5px rgba(0,0,0,.1);
}

<button
  className="c0"
  color="white"
  fill="fill"
  onClick={[Function]}
  type="button"
>
  button
</button>
`;

exports[`Button snapshot white outline 1`] = `
.c0 {
  background-color: #ffffff;
  border-color: transparent;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.125;
  padding: .5625rem 1rem;
  font-size: .75rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #5a6169;
}

.c0:hover {
  background-color: #ffffff;
  border-color: transparent;
  box-shadow: 0 0.125rem 0.625rem rgba(129,142,163,.2),0 0.0625rem 0.125rem rgba(129,142,164,.3);
  color: #5a6169;
}

.c0:active {
  border-color: #007bff;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(251,251,251,.15),0 3px 15px rgba(251,251,251,.2),0 2px 5px rgba(0,0,0,.1);
}

<button
  className="c0"
  color="white"
  fill="outline"
  onClick={[Function]}
  type="button"
>
  button
</button>
`;

exports[`Button snapshot white small 1`] = `
.c0 {
  background-color: #ffffff;
  border-color: #e1e5eb;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  padding: 0.4286rem 0.875rem;
  font-size: 0.6875rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #5a6169;
}

.c0:hover {
  background-color: #ffffff;
  border-color: #e1e5eb;
  box-shadow: 0 0.125rem 0.625rem rgba(129,142,163,.2),0 0.0625rem 0.125rem rgba(129,142,164,.3);
  color: #5a6169;
}

.c0:active {
  background-color: #007bff;
  border-color: #007bff;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(251,251,251,.15),0 3px 15px rgba(251,251,251,.2),0 2px 5px rgba(0,0,0,.1);
}

<button
  className="c0"
  color="white"
  fill="fill"
  onClick={[Function]}
  type="button"
>
  button
</button>
`;

exports[`Button snapshot white small outline 1`] = `
.c0 {
  background-color: #ffffff;
  border-color: transparent;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  padding: 0.4286rem 0.875rem;
  font-size: 0.6875rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
  color: #5a6169;
}

.c0:hover {
  background-color: #ffffff;
  border-color: transparent;
  box-shadow: 0 0.125rem 0.625rem rgba(129,142,163,.2),0 0.0625rem 0.125rem rgba(129,142,164,.3);
  color: #5a6169;
}

.c0:active {
  border-color: #007bff;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(251,251,251,.15),0 3px 15px rgba(251,251,251,.2),0 2px 5px rgba(0,0,0,.1);
}

<button
  className="c0"
  color="white"
  fill="outline"
  onClick={[Function]}
  type="button"
>
  button
</button>
`;

exports[`Button snapshot wrong fill prop 1`] = `
.c0 {
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  line-height: 1.125;
  padding: .5625rem 1rem;
  font-size: .75rem;
  -webkit-transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  transition: all 250ms cubic-bezier(.27,.01,.38,1.06);
  cursor: pointer;
}

.c0:active {
  box-shadow: inset 0 3px 5px rgba(0,0,0,.125)!important;
  color: #ffffff;
}

<button
  className="c0"
  fill="wrong"
  onClick={[Function]}
  type="button"
>
  button
</button>
`;
